# testing-creating-agents

./: .gitignore
AgentsWithMemory/: README.md  main.py  pyproject.toml
AgentsWithMemory/infraestructure/: loading_docker.txt
AgentsWithMemory/prototype_folder/: prompts.py  prototype.ipynb
AgentsWithMemory/prototype_folder/memory_setup/qdrant/: baseStoreInterface.py  qdrantBaseStoreWrapper.py  qdrantVectorStoreLocal.py
Blog-CodeReviewer-Orchestrator/: requirements.txt
Booking-Reservation-Multimodal/: BookingPrototype.ipynb  README.md  main.py  pyproject.toml  roadmap-chat-with-agents.excalidraw
Booking-Reservation-Multimodal/booking_chatbot_app/: BookingPrototype.py  main.py  testing.py
Booking-Reservation-Multimodal/booking_chatbot_app/audio/: audio_input.py  talker.py
Booking-Reservation-Multimodal/booking_chatbot_app/chat_agent_system/: system_messages.py
Booking-Reservation-Multimodal/booking_chatbot_app/images/: images.py
Booking-Reservation-Multimodal/booking_chatbot_app/models/: chat_models.py  chat_models_router.py  claude_model.py  deepseek_model.py  gpt_model.py
Booking-Reservation-Multimodal/booking_chatbot_app/ui/: gradio_audio_input.py  gradio_text_input.py  ui_gradio.py
MCP/mcp-postgress-audio/: pyproject.toml
MCP/mcp-postgress-audio/app/: main.py
MCP/mcp-postgress-audio/app/db_definitions/: pydantic_models.py
MCP/mcp-postgress-audio/app/graph/: graph_definition.py  graph_state.py  system_prompt.py
Scientific-Agents/: LearningTopicsWithAI.ipynb  main.py  pyproject.toml
Slack/: requirements.txt
Websites/: testing-1.ipynb  (+1 more)
(+33 files in other folders)
